# mlxformers

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
src/mlxformers/: __init__.py  configuration_utils.py  modeling_mlx_utils.py  modeling_utils.py
src/mlxformers/models/sam/: __init__.py  convert_sam_to_mlxformers.py  modeling_mlx_sam.py  modeling_sam.py
src/mlxformers/utils/: __init__.py  generic.py  hub.py
tests/models/sam/: test_modeling_mlx_sam.py
