[project]
name = "mlxformers"
version = "0.1.0"
description = "This is a MLX implementation of the transformers library from Hugging Face. This should contain all or a subset of the models from the transformers libraary until it gets added to the original library."
authors = [
    {name = "Eduardo Pacheco", email = "pacheco.eduardo.silva@gmail.com"},
]
dependencies = [
    "mlx>=0.14.1",
    "huggingface-hub>=0.24.5",
    "transformers>=4.44.0",
    "pillow>=10.4.0",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.5.7",
    "pre-commit>=3.5.0",
]

# COPYING FROM transformers to keep the same style
[tool.ruff]
line-length = 119

[tool.ruff.lint]
# Never enforce `E501` (line length violations).
ignore = ["C901", "E501", "E741", "F402", "F823" ]
select = ["C", "E", "F", "I", "W"]

# Ignore import violations in all `__init__.py` files.
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403", "F811"]

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
